# docklight

./: .configure.ac.un~  .gitignore  COPYRIGHT.md  LICENSE  Makefile.am  README.md  autogen.sh  clean.sh  configure.ac  createpo.sh  files.txt  install_dependencies.sh  install_docklight.sh  it.mo  it.po  reset.sh  uninstall_docklight.sh
data/: Makefile.am  docklight.desktop  docklight.launcher.sh  docklight.menu.desktop  docklight.sh  docklight.template.desktop  docklight5.config  docklight5.desktop  org.freedesktop.docklight.policy
data/icons/: Makefile.am
debian/: README.Debian  README.source  changelog  control  copyright  debhelper-build-stamp  docklight.install  docklight.postinst  docklight.postrm  docklight.substvars  files  rules
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
package/: docklight_1.0-24_amd64.deb
po/: LINGUAS  POTFILES.in  ar.po  compile_all.sh  de.po  deploymo.sh  docklight.pot  es.po  fr.po  it.po  ja.po  merge.sh  ru.po  th.po  zh.po
po/ar/: docklight.mo
po/de/: docklight.mo
po/es/: docklight.mo
po/fr/: docklight.mo
po/it/: docklight.mo
po/ja/: docklight.mo
po/ru/: docklight.mo
po/th/: docklight.mo
po/zh/: docklight.mo
src/: .Configuration.cpp.swp  .DockItem.h.swp  .DockPanel.cpp.swp  .DockPanel.h.swp  .Makefile.am.un~  .appwindow.cpp.un~  .appwindow.h.un~  .class_appwindow.cpp.un~  .class_appwindow.h.un~  .cmp_parameters.cpp.un~  .common.h.un~  .main.cpp.un~  About.cpp  About.h  Animations.h  AppRunAnimation.cpp  AppRunAnimation.h  AppRunThread.cpp  AppRunThread.h  AppUpdater.cpp  AppUpdater.h  AppWindow.cpp  AppWindow.h  AppWindowBase.h  Configuration.cpp  Configuration.h  DockItem.cpp  DockItem.h  DockItemPositions.cpp  DockItemPositions.h  DockMenu.h  DockPanel.cpp  DockPanel.h  DockPreview.cpp  DockPreview.h  DockWindow.cpp  DockWindow.h  DockWindowHandler.cpp  DockWindowHandler.h  DragAndDropWindow.cpp  (+42 more)
src/.deps/: docklight-AppWindow.Po  docklight-Configuration.Po  docklight-DockItem.Po  docklight-DockPanel.Po  docklight-DockWindowHandler.Po  docklight-IconLoader.Po  docklight-Launcher.Po  docklight-MoReader.Po  docklight-MonitorGeometry.Po  docklight-SessionWindow.Po  docklight-Utilities.Po  docklight-WindowControl.Po  docklight-main.Po
src/.kdev4/: src.kdev4
src/components/: .command_line.cpp.un~  .command_line.h.un~  CompositedWindow.cpp  CompositedWindow.h  ExplodesWindow.cpp  ExplodesWindow.h  TransparentWindow.cpp  TransparentWindow.h  animation.cpp  animation.h  animboomwindow.cpp  animboomwindow.h  appobserver.cpp  appobserver.h  appupdater.cpp  appupdater.h  arguments.cpp  arguments.h  autohide.cpp  autohide.h  autohidemanager.cpp  autohidemanager.h  capture.cpp  capture.h  command_line (copy).h____  command_line.cpp  command_line.h  compositewindow.cpp  compositewindow.h  config.cpp  config.h  configfile.cpp  configfile.h  coverwindow.cpp  coverwindow.h  dadwindow.cpp  dadwindow.h  device.cpp  device.h  dock_item.cpp  (+38 more)
src/components/.deps/: docklight-command_line.Po
src/data/: Makefile  Makefile.in  docklight.config  docklight.config.xml  docklight.ini  docklight.launcher.sh  docklight.menu.desktop  docklight.template.desktop  org.freedesktop.docklight.policy
src/data/icons/: Makefile  Makefile.am  Makefile.in
src/test/: test_mouse_passthrougt.cpp
src/utils/: blur.c  cairo.cpp  cairo.h  desktopfile.cpp  desktopfile.h  easing.cpp  easing.h  factory.cpp  factory.h  file.cpp  file.h  launcher.cpp  launcher.h  logger.h  moreader.cpp  moreader.h  pixbuf.cpp  pixbuf.h  position.cpp  position.h  singletonbase.h  string.cpp  string.h  struts.cpp  struts.h  system.cpp  system.h  themes.cpp  themes.h  wnck.cpp  wnck.h
