SUBDIRS = src po data 
		
# Add INTLTOOL_FILES to the EXTRA_DIST list of files.
# This ensures that when you do a make dist, 
# these commands will be included in the source tarball.
# Define INTLTOOL_FILES as:	

INTLTOOL_FILES = intltool-extract.in \
                 intltool-merge.in \
                 intltool-update.in



DISTCLEANFILES = intltool-extract \
                 intltool-merge \
                 intltool-update \
                 po/.intltool-merge-cache	

