docklight16dir = /usr/share/icons/hicolor/16x16/apps
dist_docklight16_DATA = 16x16/docklight.home.jpg

docklight22dir = /usr/share/icons/hicolor/22x22/apps
dist_docklight22_DATA = 22x22/docklight.home.jpg

docklight24dir = /usr/share/icons/hicolor/24x24/apps
dist_docklight24_DATA = 24x24/docklight.home.jpg

docklight32dir = /usr/share/icons/hicolor/32x32/apps
dist_docklight32_DATA = 32x32/docklight.home.jpg

docklight40dir = /usr/share/icons/hicolor/40x40/apps
dist_docklight40_DATA = 40x40/docklight.home.jpg

docklight48dir = /usr/share/icons/hicolor/48x48/apps
dist_docklight48_DATA = 48x48/docklight.home.jpg

docklight64dir = /usr/share/icons/hicolor/64x64/apps
dist_docklight64_DATA = 64x64/docklight.home.jpg

docklight128dir = /usr/share/icons/hicolor/128x128/apps
dist_docklight128_DATA = 128x128/docklight.home.jpg


